syntax = "proto3";

package greeter;

option go_package = "github.com/auth0/go-jwt-middleware/v3/examples/grpc-example/proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting (requires authentication)
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Health check (no authentication required)
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string authenticated_as = 2;
}

// Health check request.
message HealthCheckRequest {}

// Health check response.
message HealthCheckReply {
  string status = 1;
}
